--- a/src/components/LogoSearch/LogoSearch.css
+++ b/src/components/LogoSearch/LogoSearch.css
@@ -1,31 +1,29 @@
-.LogoSearch{
-    display: flex;
-    gap: 0.75rem;
+.LogoSearch {
+  gap: 0.75rem;
 }
 
-.Search{
-    display: flex;
-    background-color: var(--inputColor);
-    border-radius: 10px;
-    padding: 5px;
+.Search {
+  display: flex;
+  background-color: var(--inputColor);
+  border-radius: 10px;
+  padding: 5px;
+  justify-content: space-between !important;
 }
 
-.Search>input{
-    background-color: transparent;
-    border:none;
-    outline: none;
+.Search > input {
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
-.s-icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(106.23deg, #f99827, #f95f35 100%);
-    border-radius: 5px;
-    padding: 4px;
-    color: white;
+.s-icon {
+  display: flex;
+  background: linear-gradient(106.54deg, #4d10dd -4.67%, #6c31bc 112.32%);
+  border-radius: 5px;
+  padding: 4px;
+  color: white;
 }
 
-.s-icon:hover{
-    cursor: pointer;
+.s-icon:hover {
+  cursor: pointer;
 }
