--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,22 +1,36 @@
-.Post
-{
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    background-color: var(--cardColor);
-    border-radius: 1rem;
-    gap: 1rem;
+.Post {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: var(--cardColor);
+  border-radius: 1rem;
+  gap: 1rem;
 }
 
-.Post>img{
-    width: 100%;
-    max-height: 20rem;
-    object-fit: cover;
-    border-radius: 0.5rem;
+.Post > img {
+  width: 100%;
+  max-height: 20rem;
+  object-fit: cover;
+  border-radius: 0.5rem;
 }
-
-.postReact{
-    display: flex;
-    align-items: flex-start;
-    gap: 1.5rem;
+.profile-image {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+}
+.postReact {
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+}
+.button__react {
+  border: none;
+  cursor: pointer;
+}
+.styleIcon {
+  color: #f9a225 !important;
+}
+.row-flex {
+  display: flex;
+  justify-content: space-between;
 }
